--- a/package.json
+++ b/package.json
@@ -3,7 +3,52 @@
   "version": "0.0.0",
   "description": "Replace context menu in react-app as you wish",
   "main": "lib/index.js",
+  "scripts": {
+    "start": "webpack-dev-server --config webpack.example.js --open",
+    "build-example": "rimraf example-dist && NODE_ENV=production webpack --config webpack.example.js",
+    "build": "rimraf lib && babel src --out-dir lib"
+  },
   "repository": "git@github.com:bashkos/react-ultimate-contextmenu.git",
   "author": "bashkos <bashkos@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
+    "prop-types": "^15.7.2",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-icons": "^3.5.0"
+  },
+  "peerDependencies": {
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "copy-webpack-plugin": "^5.0.1",
+    "eslint": "^5.15.0",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.11",
+    "react": "^16.8.3",
+    "react-dom": "npm:@hot-loader/react-dom",
+    "react-hot-loader": "^4.7.1",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "rimraf": "^2.6.3",
+    "standard": "^12.0.1",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
+  },
+  "standard": {
+    "parser": "babel-eslint"
+  }
 }
