--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --config webpack.example.js --open",
     "build-example": "rimraf example-dist && NODE_ENV=production webpack --config webpack.example.js",
-    "build": "rimraf lib && babel src --out-dir lib"
+    "build": "rimraf lib && NODE_ENV=production babel src --out-dir lib"
   },
   "repository": "git@github.com:bashkos/react-ultimate-contextmenu.git",
   "author": "bashkos <bashkos@gmail.com>",
