--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build-example": "rimraf example-dist && NODE_ENV=production webpack --config webpack.example.js",
     "build": "rimraf lib && NODE_ENV=production babel src --out-dir lib"
   },
-  "repository": "git@github.com:bashkos/react-ultimate-contextmenu.git",
-  "author": "bashkos <bashkos@gmail.com>",
+  "repository": "git@github.com:qodunpob/react-ultimate-contextmenu.git",
+  "author": "qodunpob <qodunpob@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "@emotion/core": "^10.0.7",
